# str-enum-case-check

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  main.py  pyproject.toml  sample.py  setup.cfg  setup.py  str_enum_case_check_flake8.py  str_enum_check.py  str_enum_flake8.py  str_enum_plugin.py  test_edge_cases.py  test_examples.py  test_plugin.py  test_plugin_sample.py  test_str_enum_cases.py  test_str_enum_plugin.py
.cursor/rules/: instructions.mdc
src/: main.rs
str_enum_case_check/: str_enum_case_check.py
tests/: test_str_enum_cases.py
