[package]
name = "str_enum_case_check"
version = "0.1.0"
edition = "2021"
description = "A flake8 plugin to check that StrEnum names match their string values"
authors = ["Gilad Barnea <giladbrn@gmail.com>"]
license = "MIT"

[dependencies]
regex = "1.10.2"
clap = { version = "4.4.13", features = ["derive"] }
rayon = "1.8.0"
walkdir = "2.4.0"
lazy_static = "1.4.0"
