[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "str_enum_case_check"
version = "0.1.0"
description = "A flake8 plugin to check that StrEnum names match their string values"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gilad Barnea", email = "giladbrn@gmail.com"}
]
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "flake8>=3.0.0",
]

[project.scripts]
strenum-check = "strenum_check:main"

[project.entry-points."flake8.extension"]
SE001 = "strenum_plugin:StrEnumPlugin"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
