[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["str_enum_case_check"]

[project]
name = "str_enum_case_check"
version = "0.1.0"
description = "A flake8 plugin to check that StrEnum names match their string values"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Gilad Barnea", email = "giladbrn@gmail.com"}
]
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "flake8>=3.0.0",
]

[project.scripts]
str-enum-case-check = "str_enum_case_check.str_enum_case_check:main"

[project.entry-points."flake8.extension"]
SE001 = "str_enum_case_check.str_enum_case_check_flake8:StrEnumPlugin"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
