[metadata]
name = str_enum_case_check
version = 0.1.0
description = A flake8 plugin to check that StrEnum names match their string values
author = Gilad Barnea
author_email = giladbrn@gmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules = str_enum_case_check

[options.entry_points]
flake8.extension =
    # TODO: add the flake8 plugin
    SE = str_enum_case_check:Plugin